[package]
name = "echor"
version = "0.1.0"
authors = ["Jamie Barnett <jamie.barnett@entura.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.33.0"
warp = "0.2.2"
tokio = {version = "0.2", features = ["full"]}
bytes = "0.5.4"
iron = "0.6.1"
router = "*"

[dependencies.bodyparser]

git = "https://github.com/iron/body-parser.git"