[package]
name = "echor"
version = "1.0.0"
authors = ["Jamie Barnett <jamiebarnett1992@gmail.com>"]

license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/jamiebarnett/echor"
repository = "https://github.com/jamiebarnett/echor"
keywords = ["cli", "http", "post", "server", "echo"]
categories = ["command-line-utilities"]

[dependencies]

clap = "2.33.0"
iron = "0.6.1"
router = "0.6.0"